Fixed search page content width, optimized legibility of imported font, added voice search, and removed outline on menu a links

--- a/css/typography.css
+++ b/css/typography.css
@@ -20,6 +20,7 @@ h1,h2,h3,h4,h5,h6,
 .navbar .brand,
 body {
 	font-family: "Source Sans Pro", sans-serif;
+	text-rendering: optimizeLegibility;
 }
 
 /* Custom  Rules */
@@ -36,6 +37,7 @@ body {
     font-size:18pt;
     color:#888;
     margin: 0 0;
+    font-weight:700;
     text-transform:uppercase;
 }
 
