--- a/style.css
+++ b/style.css
@@ -460,6 +460,10 @@ img.wp-smiley,
 	margin: 3.428571429rem 0;
 }
 
+.navbar .nav li a {
+	outline: none;
+}
+
 .navbar .nav li.current-menu-item a,
 .navbar .nav li.current-menu-item a:hover,
 .navbar .nav li.current-menu-item a:focus {
@@ -486,6 +490,12 @@ img.wp-smiley,
 	box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
 }
 
+.dropdown-menu > .active > a,
+.dropdown-menu > .active > a:hover,
+.dropdown-menu > .active > a:focus {
+	color: #FFFFFF !important;
+}
+
 .navbar .btn,
 .navbar .btn-group {
 	margin-top: 2px !important;
@@ -493,6 +503,18 @@ img.wp-smiley,
 
 .navbar .btn-navbar {
 	padding: 5px 8px;
+}
+
+.navbar .btn-navbar i {
+	color: #333333;
+}
+
+.navbar-inverse .btn-navbar i {
+	color: #ffffff;
+}
+
+.navbar .dropdown-toggle .caret {
+margin-top: 9px !important;
 }
 
 /* Author profiles */
@@ -642,8 +664,7 @@ section[role="banner"] {
 	-webkit-hyphens: auto;
 	-moz-hyphens: auto;
 	hyphens: auto;
-	margin-bottom: 48px;
-	margin-bottom: 3.428571429rem;
+	margin-bottom: 24px;
 	word-wrap: break-word;
 }
 .widget-area .widget h3 {
